name:                lens-xml
version:             0.1.0.0
synopsis:            Lenses for the xml package.
description:         Please see README.md
homepage:            https://github.com/nkpart/lens-xml#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2016 Nick Partridge
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.XML.Light.Lens
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , xml
  default-language:    Haskell2010

test-suite lens-xml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lens-xml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/lens-xml
